<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Colabora -->

    <string name="texto_colabora">   Mándenos sus propias recetas en breve podrá encontrarla entre las búsquedas.
     Rellene los campos que se muestran a continuación y pulse el botón enviar una vez haya finalizado.</string>
    <string name="nom_receta">Nombre receta</string>
    <string name="ing_receta">Ingrediente principal</string>
    <string name="dur_receta">Duración receta</string>
    <string name="loc_receta">Zona geográfica</string>
    <string name="dif_receta">Dificultad receta</string>
    <string name="tex_receta">Descripción receta</string>
    <string name="cat_receta">Categoría</string>
    <string name="btn_receta">Enviar</string>
    <string name="colabora_main">Colabora</string>
    <string name="about_main">About</string>

    <!-- Otros -->

    <string name="app_name">Cookin</string>
    <string name="g_plus">GooglePlus</string>
    <string name="favoritos">Favoritos</string>
    <string name="pendiente">Pendiente</string>
    <string name="hecho">Hecho</string>
    <string name="premium">Premium</string>
    <string name="my_account">Mi Cuenta</string>
    <string name="recipes">Recetas</string>
    <string name="colaborate">Colabora</string>
    <string name="help">Ayuda</string>
    <string name="online_shop">Compra Online</string>
    <string name="premium_recipes">Recetas Premium</string>
    <string name="settings">Ajustes</string>
    <string name="about">Acerca de CookIn</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_drawer">MainDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <string-array name="tab">
        <item>Favoritos</item>
        <item>Pendiente</item>
        <item>Hechas</item>
        <item>Premium</item>
    </string-array>
    <string-array name="tabRecetas">
        <item>Categorías</item>
        <item>Avanzadas</item>
        <item>Más cocinadas</item>
        <item>Más valoradas</item>
    </string-array>

    <!-- Strings del Spinner Categorias -->
    <string-array name="carnes"> <!-- Array de los diferentes tipos de carnes del Spinner de alimentos -->

        <item>Todos</item>
        <item>Ternera</item>
        <item>Pollo</item>
        <item>Conejo</item>
        <item>Cerdo</item>
        <item>Caballo</item>
        <item>Cordero</item>
        <item>Pato</item>
        <item>Gallina</item>
        <item>Callos</item>
    </string-array>
    <string-array name="pescados"> <!-- Array de los diferentes tipos de pescados del Spinner de alimentos -->

        <item>Todos</item>
        <item>Bacalao</item>
        <item>Salmón</item>
        <item>Sepia</item>
        <item>Dorada</item>
        <item>Merluza</item>
        <item>Pescadilla</item>
        <item>Atún</item>
    </string-array>
    <string-array name="verduras"> <!-- Array de los diferentes tipos de verduras del Spinner de alimentos -->
        <item>Todos</item>
        <item>Zanahoria</item>
        <item>Cebolla</item>
        <item>Calabacín</item>
        <item>Alcachofa</item>
        <item>Tomates</item>
    </string-array>
    <string-array name="pasta"> <!-- Array de los diferentes tipos de pastas del Spinner de alimentos -->
        <item>Todos</item>
        <item>Macarrones</item>
        <item>Espaguetis</item>
        <item>Lasaña</item>
        <item>Tallarines</item>
        <item>Arroz</item>
        <item>Pizza</item>
    </string-array>
    <string-array name="postres"> <!-- Array de los diferentes tipos de postres del Spinner de alimentos -->
        <item>Todos</item>
        <item>Chocolate</item>
        <item>Mango</item>
    </string-array>

    <!-- Arrays de los Spinners del fragment AVANZADAS -->
    <string-array name="duracion"> <!-- Array de las duraciones disponibles del Spinner spDuracionAvanzadas -->

        <item>Sin filtro</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
    </string-array>
    <string-array name="dificultad"> <!-- Array de las duraciones disponibles del Spinner spDificultadAvanzadas -->

        <item>Sin filtro</item>
        <item>Fácil</item>
        <item>Media</item>
        <item>Dificil</item>
    </string-array>
    <string-array name="zona"> <!-- Array de las duraciones disponibles del Spinner spZonaAvanzadas -->

        <item>Sin filtro</item>
        <item>Oriental</item>
        <item>Sudamérica</item>
        <item>Mediterránea</item>
        <item>África</item>
        <item>Otros</item>
    </string-array>
    <string-array name="alimento"> <!-- Array de las duraciones disponibles del Spinner spAlimentoAvanzadas -->

        <item>Sin filtro</item>
        <item>Carne</item>
        <item>Pescado</item>
        <item>Vegetal</item>
        <item>Pasta</item>
        <item>Ensaladas</item>
        <item>Postres</item>
    </string-array>

    <string name="title_activity_tipo_receta">TipoReceta</string>
    <string name="title_activity_lista_recetas">ListaRecetas</string>
    <string name="title_activity_recipe_mode_selector">recipeModeSelector</string>
    <string name="activity_recipe_mode_selector_layout">Receta</string>

    <!-- Strings RecipeMode -->
    <string name="read_button">LECTURA</string>
    <string name="assistant_button">ASISTENTE</string>
    <string name="difficulty">Dificultad: </string>
    <string name="duration">Duración: </string>
    <string name="votes">Votos: </string>
    <string name="zone">Zona: </string>
    <string name="title_activity_recipe_assistant">recipeAssistant</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="demo_tuto">Tutorial</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Asistente -->
    <string name="backButton">Anterior</string>
    <string name="start">Empezar</string>
    <string name="stop">Parar</string>
    <string name="nextButton">Siguiente</string>

</resources>
